# SnowPME

./: .gitignore  .gitmodules  BUILDING  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SnowPME.sln  Thumbs.db  UpgradeLog.htm  autogen.sh  commit_lastet_submodule.bat  commit_latest_submodules.sh  meson.build  update_submodules.cmd  update_submodules.sh
LibCXML/: CMakeLists.txt  CXMLAttribute.cpp  CXMLAttribute.hpp  CXMLAttributeBase.cpp  CXMLAttributeBase.hpp  CXMLElement.cpp  CXMLElement.hpp  CXMLFile.hpp  CXMLReader.cpp  CXMLReader.hpp  CXMLStream.cpp  CXMLStream.hpp  LibCXML.hpp  LibCXML.vcxproj  LibCXML.vcxproj.filters
LibMonoBridge/: CMakeLists.txt  LibMonoBridge.hpp  LibMonoBridge.vcxproj  LibMonoBridge.vcxproj.filters  PssCrypto.cpp  PssCrypto.h  PssCrypto.hpp  PssCrypytoContext.h
LibPSM/: CMakeLists.txt  LibPSM.hpp  LibPSM.vcxproj  LibPSM.vcxproj.filters
LibPSM/Sce/PlayStation/Core/: Error.cpp  Error.hpp  Matrix4.hpp  Vector3.hpp
LibPSM/Sce/PlayStation/Core/Audio/: Bgm.cpp  Bgm.hpp  BgmPlayer.cpp  BgmPlayer.hpp  BgmStatus.hpp  Sound.cpp  Sound.hpp  SoundPlayer.cpp  SoundPlayer.hpp
LibPSM/Sce/PlayStation/Core/Device/: Camera.cpp  Camera.hpp  CameraImportDialog.cpp  CameraImportDialog.hpp  CameraInfo.hpp  CameraSize.hpp  CameraState.hpp  Location.cpp  Location.hpp  LocationDeviceType.hpp  PhotoImportDialog.cpp  PhotoImportDialog.hpp  PictureState.hpp
LibPSM/Sce/PlayStation/Core/Environment/: Action.hpp  ActionType.hpp  Clipboard.cpp  Clipboard.hpp  CommonDialogResult.hpp  CommonDialogState.hpp  InternalData.hpp  Log.cpp  Log.hpp  NetworkInformation.cpp  NetworkInformation.hpp  ParameterKey.hpp  PersistentMemory.cpp  PersistentMemory.hpp  Shell.cpp  Shell.hpp  SystemEvents.cpp  SystemEvents.hpp  SystemMemory.cpp  SystemMemory.hpp  SystemParameters.cpp  (+3 more)
LibPSM/Sce/Pss/Core/: Abstract.hpp  Application.cpp  Application.hpp  BitwiseEnum.hpp  Bool.hpp  Error.cpp  Error.hpp  Errorable.cpp  Errorable.hpp  ExceptionInfo.cpp  ExceptionInfo.hpp  Handles.cpp  Handles.hpp  InitializeCsharp.cpp  InitializeCsharp.hpp  Matrix4.hpp  PlatformSpecific.cpp  PlatformSpecific.hpp  PsmMonoFunc.hpp  PsmObject.cpp  PsmObject.hpp  Vector3.hpp
LibShared/: CMakeLists.txt  Config.cpp  Config.hpp  LibShared.hpp  LibShared.vcxproj  LibShared.vcxproj.filters  RuntimeImplementation.hpp
LibShared/Debug/: Logger.cpp  Logger.hpp
LibShared/String/: Path.cpp  Path.hpp  StringUtil.cpp  StringUtil.hpp  Util.cpp  Util.hpp
LibShared/Threading/: ProgressTracker.hpp  ThreadSafeCounter.cpp  ThreadSafeCounter.hpp
SnowPME/: CMakeLists.txt  Config.cpp  Config.hpp  Program.cpp  Program.hpp  SnowPME.cfg  SnowPME.cpp  SnowPME.rc  SnowPME.vcxproj  SnowPME.vcxproj.filters  resource.h
SnowPME/Debug/: Logger.cpp  Logger.hpp
SnowPME/IO/: DirectoryIterator.cpp  DirectoryIterator.hpp  FileSystem.cpp  FileSystem.hpp  ICall.cpp  Path.cpp  Path.hpp  PlatformSpecific.cpp  PlatformSpecific.hpp  Sandbox.cpp  Sandbox.hpp
SnowPME/IO2/: ICall.hpp  Path.cpp  Path.hpp
SnowPME/Include/SnowPME/: Mono.h
SnowPME/Include/mono/metadata/: file-io-pss.h  object.h  threadpool.h  threads.h
SnowPME/Io/: Filesystem.cpp  Filesystem.hpp  ICall.cpp  Path.cpp  Path.hpp
SnowPME/LibPSM/: LibPSM.hpp
SnowPME/Metadata/: AppInfo.cpp  AppInfo.hpp
SnowPME/Mono/: Init.cpp  Init.hpp  Resources.cpp  Resources.hpp  Security.cpp  Security.hpp
SnowPME/Runtime/: AppGlobals.cpp  AppGlobals.hpp  Init.cpp  Init.hpp  Resources.cpp  Resources.hpp  Security.cpp  Security.hpp
SnowPME/Util/: Config.cpp  Config.hpp  StringUtils.cpp
subprojects/GlobalInclude/: meson.build  miniaudio.h
subprojects/LibGLAD/: LibGLAD.vcxproj  LibGLAD.vcxproj.filters  glad.c  meson.build
subprojects/LibGLAD/glad/: glad.h
subprojects/LibImGui/: CMakeLists.txt  LibImGui.hpp  LibImGui.vcxproj  LibImGui.vcxproj.filters  imconfig.h  meson.build
subprojects/LibImGui/backends/: imgui_impl_gles2.cpp  imgui_impl_gles2.h  imgui_impl_sdl2.cpp
subprojects/LibPSM/: LibPSM.hpp  LibPSM.vcxproj  LibPSM.vcxproj.filters  meson.build
subprojects/LibPSSMono/: configure  meson.build
subprojects/LibPssMono/: configure  meson.build
subprojects/LibShared/: CompilerCompat.hpp  Config.cpp  Config.hpp  LibShared.hpp  LibShared.vcxproj  LibShared.vcxproj.filters  RuntimeImplementation.hpp  SdkVersion.hpp  meson.build
subprojects/LibShared/Crypto/: Algorithms.hpp  aes.c  aes_x86.c
subprojects/LibShared/Debug/: Assert.cpp  Assert.hpp  ConsoleColor.hpp  Logger.cpp  Logger.hpp
subprojects/LibShared/Package/: PackageError.hpp  PackageExtractor.cpp  PackageExtractor.hpp  PackageFile.hpp
subprojects/LibShared/Pkg/: Package.hpp  err.h  io.cpp  io.h  pkg.c  pkg.h  sceIo.cpp  sceIo.hpp  sceTypes.hpp
subprojects/LibShared/String/: Format.cpp  Format.hpp  Path.cpp  Path.hpp  StringUtil.cpp  StringUtil.hpp
subprojects/LibShared/Threading/: ProgressTracker.cpp
subprojects/LibShared/Windowing/: CallbackBase.cpp  CallbackBase.hpp  Capture.hpp  Event.cpp  Event.hpp  EventQueue.cpp  EventQueue.hpp  EventType.hpp  RunFunction.hpp  WindowControl.cpp  WindowControl.hpp
subprojects/LibSnowPME/: CMakeLists.txt  LibSnowPME.hpp  LibSnowPME.vcxproj  LibSnowPME.vcxproj.filters  meson.build
subprojects/LibSnowPME/Callback/: Impl.hpp  WindowImpl.cpp  WindowImpl.hpp
subprojects/LibSnowPME/Graphics/: ImGuiBackend.hpp  ImGuiGL2Backend.cpp  ImGuiGL2Backend.hpp  ImGuiGLES2Backend.cpp  ImGuiGLES2Backend.hpp  Window.cpp  Window.hpp
subprojects/LibSnowPME/Graphics/Gui/: ConfigurationWindow.cpp  ConfigurationWindow.hpp  DemoWindow.hpp  ImGuiWindow.cpp  ImGuiWindow.hpp  InstallGameFolderWindow.cpp  InstallGameFolderWindow.hpp  InstallGamePackageWindow.cpp  InstallGamePackageWindow.hpp  InstallGameWindow.cpp  InstallGameWindow.hpp  MsgBox.cpp  ProgramList.cpp  ProgramList.hpp  ProgramSelectWindow.cpp  ProgramSelectWindow.hpp  RuntimeLibsWindow.cpp  SnowGui.cpp  SnowGui.hpp
subprojects/LibSnowPME/Runtime/: Application.cpp  Application.hpp  ApplicationEvent.cpp  ApplicationEvent.hpp
subprojects/SnowPMEBenchmark/: main.cpp  meson.build
(+762 files in other folders)
