cmake_minimum_required(VERSION 3.20)

project(LibPSM VERSION 0.1)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_library(LibPSM STATIC
    Sce/Pss/Core/Threading/Thread.hpp
    Sce/Pss/Core/Threading/Thread.cpp
    Sce/Pss/Core/Metadata/AppInfo.hpp
    Sce/Pss/Core/Metadata/AppInfo.cpp
    Sce/Pss/Core/Crypto/Md5Hash.cpp
    Sce/Pss/Core/Crypto/Algorithms
    Sce/Pss/Core/Crypto/Algorithms/hmac_sha256.h
    Sce/Pss/Core/Crypto/Algorithms/sha1.h
    Sce/Pss/Core/Crypto/Algorithms/sha256.c
    Sce/Pss/Core/Crypto/Algorithms/aes.h
    Sce/Pss/Core/Crypto/Algorithms/md5.h
    Sce/Pss/Core/Crypto/Algorithms/Algorithms.hpp
    Sce/Pss/Core/Crypto/Algorithms/sha1.c
    Sce/Pss/Core/Crypto/Algorithms/hmac_sha256.c
    Sce/Pss/Core/Crypto/Algorithms/aes.c
    Sce/Pss/Core/Crypto/Algorithms/sha256.h
    Sce/Pss/Core/Crypto/Algorithms/md5.c
    Sce/Pss/Core/Crypto/AesEcb.cpp
    Sce/Pss/Core/Crypto/Keys.hpp
    Sce/Pss/Core/Crypto/CryptoLibrary.hpp
    Sce/Pss/Core/Crypto/AesEcb.hpp
    Sce/Pss/Core/Crypto/CryptoLibrary.cpp
    Sce/Pss/Core/Crypto/AesCbc.cpp
    Sce/Pss/Core/Crypto/AesCbc.hpp
    Sce/Pss/Core/Crypto/Md5Hash.hpp
    Sce/Pss/Core/Vector4.hpp
    Sce/Pss/Core/Bool.hpp
    Sce/Pss/Core/Imaging/Font.cpp
    Sce/Pss/Core/Imaging/ImageSize.hpp
    Sce/Pss/Core/Imaging/ImageRect.hpp
    Sce/Pss/Core/Imaging/ImagePosition.hpp
    Sce/Pss/Core/Imaging/CharMetrics.hpp
    Sce/Pss/Core/Imaging/Image.cpp
    Sce/Pss/Core/Imaging/FontAlias.hpp
    Sce/Pss/Core/Imaging/Image.hpp
    Sce/Pss/Core/Imaging/FontStyle.hpp
    Sce/Pss/Core/Imaging/ImageColor.hpp
    Sce/Pss/Core/Imaging/Font.hpp
    Sce/Pss/Core/Imaging/FontMetrics.hpp
    Sce/Pss/Core/Imaging/ImageMode.hpp
    Sce/Pss/Core/Audio/Bgm.hpp
    Sce/Pss/Core/Audio/SoundStatus.hpp
    Sce/Pss/Core/Audio/SoundPlayer.hpp
    Sce/Pss/Core/Audio/Bgm.cpp
    Sce/Pss/Core/Audio/Sound.hpp
    Sce/Pss/Core/Audio/Sound.cpp
    Sce/Pss/Core/Audio/BgmPlayer.hpp
    Sce/Pss/Core/Audio/BgmPlayer.cpp
    Sce/Pss/Core/Audio/SoundPlayer.cpp
    Sce/Pss/Core/Audio/BgmStatus.hpp
    Sce/Pss/Core/Mono/Util.cpp
    Sce/Pss/Core/Mono/Util.hpp
    Sce/Pss/Core/Mono/Security.cpp
    Sce/Pss/Core/Mono/Security.hpp
    Sce/Pss/Core/Mono/PsmDlls.hpp
    Sce/Pss/Core/Mono/Resources.hpp
    Sce/Pss/Core/Mono/Resources.cpp
    Sce/Pss/Core/Vector2.hpp
    Sce/Pss/Core/Callback/AudioCallbacks.hpp
    Sce/Pss/Core/Callback/WindowCallbacks.hpp
    Sce/Pss/Core/Callback/WindowCallbacks.cpp
    Sce/Pss/Core/Callback/Callbacks.hpp
    Sce/Pss/Core/Callback/Callbacks.cpp
    Sce/Pss/Core/Callback/AudioCallbacks.cpp
    Sce/Pss/Core/Edata/EdataHeader.hpp
    Sce/Pss/Core/Edata/PsmDrm.hpp
    Sce/Pss/Core/Edata/PsmDrm.cpp
    Sce/Pss/Core/Edata/PsmDrmLicense.hpp
    Sce/Pss/Core/Edata/EdataList.hpp
    Sce/Pss/Core/Edata/EdataStream.cpp
    Sce/Pss/Core/Edata/EdataStream.hpp
    Sce/Pss/Core/Edata/EdataList.cpp
    Sce/Pss/Core/Input/GamePadData.hpp
    Sce/Pss/Core/Input/Touch.hpp
    Sce/Pss/Core/Input/GamePad.cpp
    Sce/Pss/Core/Input/GamePad.hpp
    Sce/Pss/Core/Input/Touch.cpp
    Sce/Pss/Core/Input/Motion.cpp
    Sce/Pss/Core/Input/MotionData.hpp
    Sce/Pss/Core/Input/TouchData.hpp
    Sce/Pss/Core/Input/TouchStatus.hpp
    Sce/Pss/Core/Input/GamePadButtons.hpp
    Sce/Pss/Core/Input/Motion.hpp
    Sce/Pss/Core/Error.cpp
    Sce/Pss/Core/Device/LocationDeviceType.hpp
    Sce/Pss/Core/Device/CameraSize.hpp
    Sce/Pss/Core/Device/CameraFacing.hpp
    Sce/Pss/Core/Device/Location.hpp
    Sce/Pss/Core/Device/PhotoImportDialog.cpp
    Sce/Pss/Core/Device/PictureState.hpp
    Sce/Pss/Core/Device/Camera.hpp
    Sce/Pss/Core/Device/CameraInfo.hpp
    Sce/Pss/Core/Device/CameraState.hpp
    Sce/Pss/Core/Device/CameraImageFormat.hpp
    Sce/Pss/Core/Device/CameraImportDialog.hpp
    Sce/Pss/Core/Device/Location.cpp
    Sce/Pss/Core/Device/CameraImportDialog.cpp
    Sce/Pss/Core/Device/LocationData.hpp
    Sce/Pss/Core/Device/Camera.cpp
    Sce/Pss/Core/Device/PhotoImportDialog.hpp
    Sce/Pss/Core/Graphics/PolygonOffset.hpp
    Sce/Pss/Core/Graphics/Texture2D.cpp
    Sce/Pss/Core/Graphics/PsmPixelBuffer.hpp
    Sce/Pss/Core/Graphics/PsmVertexBuffer.cpp
    Sce/Pss/Core/Graphics/PsmVertexBuffer.hpp
    Sce/Pss/Core/Graphics/GraphicsState.hpp
    Sce/Pss/Core/Graphics/GraphicsContext.cpp
    Sce/Pss/Core/Graphics/PsmFrameBuffer.cpp
    Sce/Pss/Core/Graphics/PsmPixelBuffer.cpp
    Sce/Pss/Core/Graphics/PixelBufferOption.hpp
    Sce/Pss/Core/Graphics/CullFaceDirection.hpp
    Sce/Pss/Core/Graphics/PsmGraphicsContext.hpp
    Sce/Pss/Core/Graphics/PsmGraphicsContext.cpp
    Sce/Pss/Core/Graphics/ProgramUniform.hpp
    Sce/Pss/Core/Graphics/ProgramAttribute.hpp
    Sce/Pss/Core/Graphics/ImportDialogEnum.hpp
    Sce/Pss/Core/Graphics/CGX.hpp
    Sce/Pss/Core/Graphics/ShaderProgram.hpp
    Sce/Pss/Core/Graphics/PsmShaderProgram.cpp
    Sce/Pss/Core/Graphics/ElementType.hpp
    Sce/Pss/Core/Graphics/TextureFilterMode.hpp
    Sce/Pss/Core/Graphics/Texture.hpp
    Sce/Pss/Core/Graphics/ShaderProgram.cpp
    Sce/Pss/Core/Graphics/PsmTexture.hpp
    Sce/Pss/Core/Graphics/DepthFuncMode.hpp
    Sce/Pss/Core/Graphics/GraphicsExtension.hpp
    Sce/Pss/Core/Graphics/FrameBuffer.cpp
    Sce/Pss/Core/Graphics/ShaderUniformType.hpp
    Sce/Pss/Core/Graphics/ShaderProgramOption.cpp
    Sce/Pss/Core/Graphics/ShaderProgramOption.hpp
    Sce/Pss/Core/Graphics/DrawMode.hpp
    Sce/Pss/Core/Graphics/PixelBuffer.hpp
    Sce/Pss/Core/Graphics/VertexBuffer.hpp
    Sce/Pss/Core/Graphics/ColorMask.hpp
    Sce/Pss/Core/Graphics/Texture2D.hpp
    Sce/Pss/Core/Graphics/BlendFuncMode.hpp
    Sce/Pss/Core/Graphics/EnableMode.hpp
    Sce/Pss/Core/Graphics/GraphicsContext.hpp
    Sce/Pss/Core/Graphics/VertexBuffer.cpp
    Sce/Pss/Core/Graphics/PixelBufferType.hpp
    Sce/Pss/Core/Graphics/Texture.cpp
    Sce/Pss/Core/Graphics/PsmShaderProgram.hpp
    Sce/Pss/Core/Graphics/PixelFormat.hpp
    Sce/Pss/Core/Graphics/InternalOption.hpp
    Sce/Pss/Core/Graphics/StencilOp.hpp
    Sce/Pss/Core/Graphics/BlendFuncFactor.hpp
    Sce/Pss/Core/Graphics/VertexFormat.hpp
    Sce/Pss/Core/Graphics/GraphicsUpdate.hpp
    Sce/Pss/Core/Graphics/CGX.cpp
    Sce/Pss/Core/Graphics/GraphicsObject.cpp
    Sce/Pss/Core/Graphics/TextureWrap.hpp
    Sce/Pss/Core/Graphics/OpenGL.hpp
    Sce/Pss/Core/Graphics/StencilFuncMode.hpp
    Sce/Pss/Core/Graphics/TextureFilter.hpp
    Sce/Pss/Core/Graphics/Primitive.hpp
    Sce/Pss/Core/Graphics/PixelBuffer.cpp
    Sce/Pss/Core/Graphics/ClearMask.hpp
    Sce/Pss/Core/Graphics/TextureWrapMode.hpp
    Sce/Pss/Core/Graphics/StencilOpMode.hpp
    Sce/Pss/Core/Graphics/PsmFrameBuffer.hpp
    Sce/Pss/Core/Graphics/TextureCube.hpp
    Sce/Pss/Core/Graphics/GraphicsObject.hpp
    Sce/Pss/Core/Graphics/MultiSampleMode.hpp
    Sce/Pss/Core/Graphics/CullFace.hpp
    Sce/Pss/Core/Graphics/FrameBuffer.hpp
    Sce/Pss/Core/Graphics/GraphicsCapsState.hpp
    Sce/Pss/Core/Graphics/TextureCubeFace.hpp
    Sce/Pss/Core/Graphics/StencilFunc.hpp
    Sce/Pss/Core/Graphics/DepthFunc.hpp
    Sce/Pss/Core/Graphics/BlendFunc.hpp
    Sce/Pss/Core/Graphics/ShaderAttributeType.hpp
    Sce/Pss/Core/Graphics/PsmTexture.cpp
    Sce/Pss/Core/Graphics/OpenGL.cpp
    Sce/Pss/Core/Graphics/TextureCube.cpp
    Sce/Pss/Core/Environment/TextInputDialog.cpp
    Sce/Pss/Core/Environment/PersistentMemory.hpp
    Sce/Pss/Core/Environment/CommonDialogState.hpp
    Sce/Pss/Core/Environment/SystemEvents.hpp
    Sce/Pss/Core/Environment/NetworkInformation.hpp
    Sce/Pss/Core/Environment/SystemMemory.hpp
    Sce/Pss/Core/Environment/Log.cpp
    Sce/Pss/Core/Environment/TextInputDialog.hpp
    Sce/Pss/Core/Environment/CommonDialogType.hpp
    Sce/Pss/Core/Environment/CommonDialogResult.hpp
    Sce/Pss/Core/Environment/PersistentMemory.cpp
    Sce/Pss/Core/Environment/SystemParameters.hpp
    Sce/Pss/Core/Environment/Clipboard.cpp
    Sce/Pss/Core/Environment/ActionType.hpp
    Sce/Pss/Core/Environment/Log.hpp
    Sce/Pss/Core/Environment/Shell.cpp
    Sce/Pss/Core/Environment/NetworkInformation.cpp
    Sce/Pss/Core/Environment/Shell.hpp
    Sce/Pss/Core/Environment/InternalData.hpp
    Sce/Pss/Core/Environment/SystemParameters.cpp
    Sce/Pss/Core/Environment/Clipboard.hpp
    Sce/Pss/Core/Environment/ParameterKey.hpp
    Sce/Pss/Core/Environment/SystemMemory.cpp
    Sce/Pss/Core/Environment/SystemEvents.cpp
    Sce/Pss/Core/Environment/Action.hpp
    Sce/Pss/Core/Environment/TextInputMode.hpp
    Sce/Pss/Core/Matrix4.hpp
    Sce/Pss/Core/Error.hpp
    Sce/Pss/Core/Timing/DeltaTime.hpp
    Sce/Pss/Core/Timing/DeltaTime.cpp
    Sce/Pss/Core/Vector3.hpp
    Sce/Pss/Core/Io/DirectoryIterator.hpp
    Sce/Pss/Core/Io/StackItem.hpp
    Sce/Pss/Core/Io/Sandbox.hpp
    Sce/Pss/Core/Io/ICall.hpp
    Sce/Pss/Core/Io/ICall.cpp
    Sce/Pss/Core/Io/FileSystem.hpp
    Sce/Pss/Core/Io/FileSystem.cpp
    Sce/Pss/Core/Io/DirectoryIterator.cpp
    Sce/Pss/Core/Io/Sandbox.cpp
    Sce/Pss/Core/Io/PsmFileDescriptor.hpp
    Sce/Pss/Core/System/Handles.cpp
    Sce/Pss/Core/System/PlatformSpecific.hpp
    Sce/Pss/Core/System/Handles.hpp
    Sce/Pss/Core/System/PlatformSpecific.cpp
    Sce/Pss/Core/Services/InAppPurchaseCommand.hpp
    Sce/Pss/Core/Services/CommandArguments.hpp
    Sce/Pss/Core/Services/InAppPurchaseDialog.cpp
    Sce/Pss/Core/Services/InAppPurchaseProductData.hpp
    Sce/Pss/Core/Services/NetworkRequest.cpp
    Sce/Pss/Core/Services/UniqueId.hpp
    Sce/Pss/Core/Services/Network.hpp
    Sce/Pss/Core/Services/CommandResults.hpp
    Sce/Pss/Core/Services/NetworkRequest.hpp
    Sce/Pss/Core/Services/AccountInformation.hpp
    Sce/Pss/Core/Services/AccountInformation.cpp
    Sce/Pss/Core/Services/UniqueId.cpp
    Sce/Pss/Core/Services/InAppPurchaseDialog.hpp
    Sce/Pss/Core/Services/Network.cpp
    Sce/Pss/Core/ExceptionInfo.hpp
    Sce/Pss/Core/ExceptionInfo.cpp
    Sce/Pss/Core/Errorable.hpp
    Sce/Pss/Core/PsmObject.cpp
    Sce/Pss/Core/Errorable.cpp
    Sce/Pss/Core/PsmObject.hpp
    Sce/Pss/Core/BitwiseEnum.hpp
    Sce/Pss/Core/Memory/HeapAllocator.cpp
    Sce/Pss/Core/Memory/HeapAllocator.hpp
)

target_compile_options(LibPSM PRIVATE -Wall -Wextra -Wno-unused-parameter)

target_include_directories(LibPSM PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(LibPSM PRIVATE
    LibCXML
    LibShared
    LibPSSMono
    glad    
)